2004-05-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageClipMask): Consistently report any
	exceptions to image->exception.

2004-05-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Update to Automake 1.8.5.
	* magick/image.h (ImageInfo): New 'progress' monitor to indicate
	if progress monitor and busy cursor are enabled while displaying
	an image.  Defaults to True.
	* magick/display.c, magick/xwindow.c: Use +progress to disable
	progress monitor and busy cursor.
	* magick/command.c (MogrifyUsage): Usage didn't list -operator.
	(ConvertUsage): Usage didn't list -operator.

2004-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/compress.c (HuffmanDecodeImage): Properly return error status.
	(HuffmanEncode2Image): Properly return error status.
	* magick/composite.c (CompositeImage): Properly return error status.
	* magick/quantize.c (ClassifyImageColors): Properly return error status.
	(GetImageQuantizeError): Properly return error status.
	(OrderedDitherImage): Properly return error status.
	* magick/profile.c (ProfileImage): Properly return error status.
	* magick/paint.c (ColorFloodfillImage): Properly return error status.
	(MatteFloodfillImage): Properly return error status.
	(OpaqueImage): Properly return error status.
	(TransparentImage): Properly return error status.
	* magick/enhance.c (ContrastImage): Properly return error status.
	(EqualizeImage): Properly return error status.
	(GammaImage): Properly return error status.
	(LevelImage): Properly return error status.
	(LevelImageChannel): Properly return error status.
	(ModulateImage): Properly return error status.
	(NegateImage): Properly return error status.
	(NormalizeImage): Properly return error status.
	* magick/image.c (GetImageClipMask): New function to retrieve an
	associated clip-mask image.
	(SetImageClipMask): Clip-mask image parameter may be const since
	it is cloned prior to storage.