@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2004-05-20  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> wand/magick_compat.c (QueryMagickColor): Fixed DLL export.
+  <LI> wand/magick_wand.c: Fixed some DLL exports (MagickExport-&gt;WandExport).
+
+</UL>
+<p>
 2004-05-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
