@@ -1,3 +1,8 @@
+2004-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* wand/magick_compat.c (QueryMagickColor): Fixed DLL export.
+	* wand/magick_wand.c: Fixed some DLL exports (MagickExport->WandExport).
+
 2004-05-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/image.c (SetImageClipMask): Consistently report any
